--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "prisma": "^6.4.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
+    "@prisma/client": "6.4.1",
     "discord.js": "^14.17.3",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "openai": "^4.86.1"
   }
 }
