--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "6.4.1",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
-    "openai": "^4.86.1"
+    "openai": "^4.86.1",
+    "zod": "^3.24.2"
   }
 }
