refactor: use bun.js instead of node.js

--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "gptforum",
   "version": "0.1.0",
   "main": "dist/main.js",
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint .",
-    "dev": "nodemon -e ts --exec 'tsc && node . || exit 1'",
-    "start": "node ."
-  },
+  "scripts": {},
   "keywords": [],
   "author": "Minhyeok Park<pmh_only@pmh.codes>",
   "license": "MIT",
@@ -20,12 +15,12 @@
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
-    "prisma": "^6.4.1",
-    "typescript": "^5.7.3",
+    "prisma": "^6.5.0",
     "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
-    "@prisma/client": "6.4.1",
+    "@prisma/client": "^6.5.0",
+    "chalk": "^5.4.1",
     "discord.js": "^14.17.3",
     "dotenv": "^16.4.7",
     "openai": "^4.86.1",
