feat: add prisma migrator image

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
+OPENAI_API_KEY=
+
 DISCORD_TOKEN=
 DISCORD_CHANNEL=1093337177859039252
 
-OPENAI_API_KEY=
-OPENAI_DEFAULT_MODEL=
-
-DATABASE_URL="mysql://gptforum:gptforum@localhost:3306/gptforum"
+DATABASE_URL=mysql://gptforum:gptforum@localhost:3306/gptforum
