--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 permissions:
-  contents: write
+  contents: read
   packages: write
 
 jobs:
@@ -33,5 +33,34 @@ jobs:
           push: true
           platforms: linux/arm64,linux/amd64
           tags: ghcr.io/pmh-only/gptforum:next
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-migrator:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        name: Checkout files
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/arm64,linux/amd64
+          tags: ghcr.io/pmh-only/gptforum-migrator:next
+          file: Dockerfile.migrator
           cache-from: type=gha
           cache-to: type=gha,mode=max
