--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.22.0"
   },
   "dependencies": {
