feat: add free tier quota display

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ DISCORD_TOKEN=
 DISCORD_CHANNEL=1093337177859039252
 
 DATABASE_URL=mysql://gptforum:gptforum@localhost:3306/gptforum
+DISCORD_LOADING_EMOJI_PLACEHOLDER=<a:loading:1349419254092529805>
